<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">O\'ZBEK TILIDA ORNITONIMLARNING IZOHLI LUG\'ATI</string>
    <string name="txtl">lorem ipsum dolor.\mBir nimalar deb yoziladi bu yerga</string>
    <string name="mundarija1">Ўзбек тилида орнитонимларнинг изоҳи.</string>
    <string name="mundarija2">Ўзбек тилида омоним-орнитонимларнинг \nалифбо кўрсаткичи</string>
    <string name="mundarija3">Ўзбек тилида орнитонимларнинг \nсинонимия кўрсаткичи</string>
    <string name="mundarija5">Фойдаланилган адабиётлар рўйхати.</string>
    <string name="mundarija4">Ўзбек тилида орнитонимларнинг \nалифбо кўрсаткичи</string>
    <string name="main6_text">\t\t <b>I. Илмий-назарий aдaбиётлaр:</b>\n\n
<b>1.</b>  Базарова Д.Х. Семантика наименований частей тела и
производных от них в тюркских языках. Автореф. дис… канд.
филол. наук. – Ташкент: 1967. – 24 с.\n\n
<b>2.</b>  Базарова Д.Х. К этимологии некоторых древнетюркских
названий птиц // Сов.тюркология, 1975, № 4. – С. 11-22.\n\n
<b>3.</b>  Базарова Д.Х. О народно-этимологическом осмыслении
некоторых звукоподражательных названий птиц в узбекском языке //
Сов. тюркология, 1975, № 5. – С. 96-100.\n\n
<b>4.</b>  Бoгдaнoв O.П. Ўзбeкистoннинг ҳaйвoнoт дунёси
(умуртқaлилaр). - Тoшкeнт, Ўзбeкистoн, 1965. – 288 б.\n\n
<b>5.</b>  Кутьева М.В. Национально-культурная специфика переносных
значений орнитонимов в русском и испанском языках. Автореф.
дис… канд. филол. наук. – М., 2009. – 25 с.\n\n
<b>6.</b>  Мaвлoнoв O.М., Кoмилoв Ғ. Зooлoгия, 6-7-синфлaр учун
дaрслик. - Тoшкeнт, Ўқитувчи, 2000. – 384 б.\n\n
<b>7.</b>  Мадвалиев А. Термин – терминологик луғат – изоҳли луғат //
Ўзбек тили ва адабиёти. 2008. № 6. – Б. 54-67.\n\n
<b>8.</b>  Мадвалиев А. Қўшма терминларнинг хусусиятлари ва уларни
тартибга солиш масалалари // Ўзбек тили илмий-техникавий
терминологиясини тартибга солиш принциплари. – Тошкент: Фан,
1991. – Б. 47-66.\n\n
<b>9.</b>  Равшанов Э. Қушлар бизнинг дўстимиз. - Тошкент: “Шарқ”
нашриёт-матбаа акциядорлик компанияси бош таҳририяти, 2010. –
176 б.\n\n
<b>10.</b>  Сафина Э.И. Названия птиц в татарском языке и их
лексикографирование. Автореф. дис… канд. филол. наук. – Казань,
2005. – 24 с.\n\n
<b>11.</b> Қушлар // Ўзбекистон Республикаси Қизил китоби. Икки
жилдлик. жилд. Ҳайвоном олами. – Тошкент: “Чинор энк.”
нашриёти, 2009. – Б. 129-177.\n\n
<b>12.</b>  Улуқов Н. Ўзбек тили гидронимларининг тарихий-лисоний
тадқиқи. – Тошкент: Фан, 2008. – 192б.\n\n
\t\t <b> II. Луғaтлaр:</b>\n\n
<b>13.</b>  Алишер Навоий асарлари тилининг изоҳли луғати. Тўрт томлик.
1-том. – Тошкент: Фан, 1983. – 656 б. \n\n
<b>14.</b>  Алишер Навоий асарлари тилининг изоҳли луғати. Тўрт томлик.
2-том. – Тошкент: Фан, 1983. – 644 б.\n\n
<b>15.</b>  Алишер Навоий асарлари тилининг изоҳли луғати. Тўрт томлик.
3- том. – Тошкент: Фан, 1984. – 624 б.\n\n
<b>16.</b>  Алишер Навоий асарлари тилининг изоҳли луғати. Тўрт томлик.
4-том. – Тошкент: Фан, 1985. – 636 б. \n\n
<b>17.</b>  Ахманова О.С. Словарь лингвистических терминов. – М.: 1969. –
608 с.\n\n
<b>18.</b>  Бегматов Э.А.Ўзбек исмлари. – Тошкент: Қомуслар бош
таҳририяти, 1991. – 208 б.\n\n
<b>19.</b>  Бегматов Э.А. Ўзбек исмлари маъноси. 14600 исмлар изоҳи. 3-
нашри. - Тошкент: “Ўзбекистон миллий энциклопедияси” давлат
илмий нашриёти, 2010. – 608 б.\n\n
<b>20.</b>  Зoҳидoв Т.З. Зooлoгия энциклoпeдияси. Қушлaр. – Тoшкeнт,
Ўз.фaн. 1957. – 256 б.\n\n
<b>21.</b>  Маҳмудов Н., Худойберганова Д. Ўзбек тили ўхшатишларининг
изоҳли луғати. – Тошкент: Маънавият, 2013. – 320 б. \n\n
<b>22.</b>  Нафасов Т. Қашқадарё ўзбек халқ сўзлари. – Тошкент:
“Муҳаррир”, 2011. – 468 б. \n\n
<b>23.</b>  Нафасов Т. Қашқадарё қишлоқномаси. – Тошкент: “Муҳаррир”,
2009.-431б.\n\n
<b>24.</b>  Қораев С. Ўзбекистон вилоятлари топонимлари, Тошкент,
“ЎзМЭ” Давлат илмий нашриёти, 2005.-238б.\n\n
<b>25.</b>  Бегалиев Н., Туробов А. Самарқанд топонимияси, СамДЧТИ
нашри, 2015. – 156б.\n\n
<b>26.</b>  Рaҳмaтуллaeв Ш. Ўзбeк тилининг этимoлoгик луғaти, 1 (туркий
сўзлaр), Тoшкeнт, “Унивeрситeт” нaшриёти, 2000. – 600 б.\n\n
<b>27.</b>  Рaҳмaтуллaeв Ш. Ўзбeк тилининг этимoлoгик луғaти, П (aрaб
сўзлaри вa улaр билaн ҳoсилaлaр), Тoшкeнт: “Унивeрситeт”
нaшриёти, 2003. – 600 б.\n\n
<b>28.</b>  Рaҳмaтуллaeв Ш. Ўзбeк тилининг этимoлoгик луғaти, Ш (форсча-тожикча бирликлар вa улaр билaн ҳoсилaлaр), Тoшкeнт:
“Унивeрситeт” нaшриёти, 2009. – 283 б.\n\n
<b>29.</b>  Русча-ўзбекча луғат. Икки томлик. 1-том. – Тошкент: Ўзбек
энциклопедияси бош таҳририяти, 1983. – 808 б.\n\n
<b>30.</b>  Русча-ўзбекча луғат. Икки томлик. 2-том. – Тошкент: Ўзбек
энциклопедияси бош таҳририяти, 1984. – 800 б.\n\n
<b>31.</b>  Тўйчибоев Б., Қашқирли Қ. Зоминннинг тил қомуси. – Тошкент:
Академнашр, 2012. – 400 б. \n\n
<b>32.</b>  Ўзбeк тилининг изoҳли луғaти, икки тoмлик, 1-тoм, М., “Русский
язык”, 1981. – 632 б.\n\n
<b>33.</b>  Ўзбeк тилининг изoҳли луғaти, икки тoмлик, 2-тoм, М., “Русский
язык”, 1981. – 715 б.\n\n
<b>34.</b>  Ўзбeк тилининг изoҳли луғaти, беш жилдлик. 1-жилд. – Тошкент:
“Ўзбекистон миллий энциклопедияси” Давлат илмий нашриёти,
2006. – 680 б.\n\n
<b>35.</b>  Ўзбeк тилининг изoҳли луғaти, беш жилдлик. 2-жилд. – Тошкент:
“Ўзбекистон миллий энциклопедияси” Давлат илмий нашриёти,
2006. – 672 б.\n\n
<b>36.</b>  Ўзбeк тилининг изoҳли луғaти, беш жилдлик. 3-жилд. – Тошкент:
“Ўзбекистон миллий энциклопедияси” Давлат илмий нашриёти,
2007. – 688 б.\n\n
<b>37.</b>  Ўзбeк тилининг изoҳли луғaти, беш жилдлик. 4-жилд. – Тошкент:
“Ўзбекистон миллий энциклопедияси” Давлат илмий нашриёти,
2008. – 608 б.\n\n
<b>38.</b>  Ўзбeк тилининг изoҳли луғaти, беш жилдлик. 5-жилд. – Тошкент:
“Ўзбекистон миллий энциклопедияси” Давлат илмий нашриёти,
2008. – 592 б.\n\n
<b>39.</b>  Ўзбeк xaлқ шeвaлaрининг луғaти, Тoшкeнт, “Фaн” нaшриёти,
1971. – 415 б.\n\n
<b>40.</b> Ҳoжиeв A. Тилшунoслик тeрминлaрининг изoҳли луғaти,
Тoшкeнт: “Ўзбекистон миллий энциклопедияси” Давлат илмий
нашриёти, 2002 - 124 б.\n\n
<b>41.</b> Ҳoжиeв A. Ўзбeк тили синoнимлaрининг изoҳли луғaти, Тoшкeнт:
Ўқитувчи, 1974. – 308 б.\n\n
<b>42.</b> ЎзМЭ – Ўзбекистон миллий энциклопедияси. 1-ХП томлар. –
Тошкент, 2000-2006.\n\n
<b>43.</b>  Заҳириддин Муҳаммад Бобур энциклопедияси, Тошкент: “Шарқ”
нашриёти, 2014. – 744б.\n\n
</string>
    <string name="adabiyot1">Алишер Навоий </string>
    <string name="adabiyot2">Алишер Навоий асарлари тилининг изоҳли луғати томлик. - Тошкент, 1983-1985.\n </string>
    <string name="adabiyot3">Базарова Д. История формирования и развитие зоологической терминологии узбекского языка (на материале названий птиц). – Ташкент: Фан, 1978.\n </string>
    <string name="adabiyot4">Заҳириддин Муҳаммад Бобур. Бобурнома. – Тошкент, 1989, 2002.\n </string>
    <string name="adabiyot5">Заҳириддин Муҳаммад Бобур энциклопедияси – Тошкент, 2014.\n </string>
    <string name="adabiyot6">Русча-ўзбекча луғат, беш томлик. – Тошкент, 1951-1955.</string>
    <string name="adabiyot7">Диссертация. Сафина Э.И. Названия птиц в татарском языке и их лексикографирование. Диссертация на соискание ученой степени кандидата филологических наук. – Казань, 2005.\n</string>
    <string name="adabiyot8">Маҳмуд Кошғарий. Девону луғатит турк. Индекс-луғат. – Тошкент, 1967.\n</string>
    <string name="adabiyot9">Древнетюркский словарь. – Л.: Наука, 1969.</string>
    <string name="adabiyot10">Мавлонов О.М. Зоология. 6-7-синфлар учун дарслик. – Тошкент, 2003.\n</string>
    <string name="adabiyot11">Зоҳидов Т. Зоология энциклопедияси. Уч томлик. 2-том. Қушлар. – Тошкент: Фан, 1957.\n</string>
    <string name="adabiyot12">Интернет материаллари.\n</string>
    <string name="adabiyot13">Канарейкалар. – Тошкент, 2007.\n</string>
    <string name="adabiyot14">Юдахин К.К. Киргизско-русский словарь. – М.: 1965.</string>
    <string name="adabiyot15">Птицы Советского Союза. Том 1-У1. – М.: 1951-1954.</string>
    <string name="adabiyot16">Русча-ўзбекча луғат. Икки томлик. – Тошкент, 1983-1984.</string>
    <string name="adabiyot17">Бегалиев Н., Туробов А. Самарқанд топонимияси, СамДЧТИ нашри, 2015.  – 156б.</string>
    <string name="adabiyot18">Моисеев В.А. Туркистоннинг ёввойи табиати. – Тошкент, 1996.</string>
    <string name="adabiyot19">Ўзбекистон миллий энциклопедияси. 1-ХП томлар. – Тошкент, 2000-2006.</string>
    <string name="adabiyot20">Ўзбекистон Республикаси. Энциклопедия. – Тошкент, 1997.\n</string>
    <string name="adabiyot21">Бегматов Э.А. Ўзбек исмлари маъноси. 14600 исмлар изоҳи. 3-нашри. - Тошкент: “Ўзбекистон миллий энциклопедияси” давлат илмий нашриёти, 2010. – 608 б.\n</string>
    <string name="adabiyot22">Ўзбек шевалари лексикаси. – Тошкент: Фан, 1991.\n</string>
    <string name="adabiyot23">Ўзбек тилининг изоҳли луғати. Икки томлик. – М., 1981. </string>
    <string name="adabiyot24">Ўзбек тилининг изоҳли луғати. Беш жилдлик. – Тошкент, 2006-2008.\n</string>
    <string name="adabiyot25">Рaҳмaтуллaeв Ш. Ўзбeк тилининг этимoлoгик луғaти, Уч томлик. - Тoшкeнт, “Унивeрситeт” нaшриёти, 2000, 2003, 2009.\n</string>
    <string name="adabiyot26">Ўзбек тили ўхшатишларининг изоҳли луғати. – Тошкент: Маънавият, 2013. \n</string>
    <string name="adabiyot27">Моисеев В.А., Кашкаров Д.Ю. Ўзбекистоннинг ҳайвонот дунёси. – Тошкент: Ўқитувчи, 1990.\n</string>
    <string name="adabiyot28">Ўзбек халқ шевалари луғати. – Тошкент: Фан, 1971.\n</string>
    <string name="adabiyot29">Равшанов Э. Қушлар бизнинг дўстимиз, Тошкент, 2010. \n</string>
    <string name="adabiyot30">Нафасов Т. Қашқадарё ўзбек халқ сўзлари. – Тошкент:  “Муҳаррир”, 2011. – 468 б.</string>
    <string name="adabiyot31">Нафасов Т. Қашқадарё қишлоқномаси. – Тошкент: “Муҳаррир”, 2009.-431.\n</string>
    <string name="fio">Юлдашева Дилноза Бекмуродовна</string>
    <string name="cv_txt">\t <b>Юлдашева Дилноза Бекмуродовна </b> 1983 йил 18 майда Самарқанд шаҳрида зиёли оилада таваллуд топган. Миллати ўзбек. Партиясиз. \n
        1990 - 2000 йилларда Самарқанд шаҳар 1-умумтаълим мактабида ўқиган. 2000-2004 йилларда (бакалавр) СамДУ ўзбек филология факультетини, 2004-2006 йилларда Лингвистика (Ўзбек тили) ихтисослиги бўйича магистратурани, 2007-2010 йилларда 10.00.01-ўзбек тили ихтисослиги бўйича кундузги бўлим аспирантурани тамомлаган. Меҳнат фаолиятини 2004 йилда 1-умумтаълим мактабидан бошлаган. СамДУ академик лицейда 2008 йил 2 сентябрдан 2019 йил сентябр ойига қадар она тили ва адабиёти фани ўқитувчиси бўлиб ишлаган. \n
        2016 йил 9-10 март кунлари ўтказилган “ Олий ва ўрта махсус таълим тизимида фанларни ўқитишда илғор педагогик технологиялардан фойдаланиш” номли илмий-амалий конференциянинг ташкилотчиси сифатида фаолият кўрсатган. \n
        Юлдашева Дилнозанинг 1та монографияси “Ўзбек тилида орнитонимларнинг лексик-семантик ва услубий хусусиятлари” (2007), 1та ўқув қўлланмаси “ Перифразаларнинг фраземалар билан муносабати ва уларни ўқитишнинг дидактик тамойиллари (2015), “Ўзбек тилида орнитонимларнинг изоҳли луғати” (2018) ва олтмишдан ортиқ илмий ва илмий оммабоп мақолалари нашрдан чиққан. \n
        Д.Б.Юлдашеванинг «Ўзбек тили орнитонимларининг структуравий ва семантик тадқиқи » мавзусидаги филология фанлари бўйича фалсафа доктори (PhD) диссертациясини 2020 йилда муваффақиятли ҳимоя қилган. \n
        Ҳозирда “Ипак йўли” туризм халқаро университетида Ўзбек тили ва адабиёти ҳамда ижтимоий фанлар кафедраси ўқитувчиси лавозимида ишлаб келмоқда.\n</string>


</resources>